--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <!-- card part -->
     <div class="border-2 border-red-500">
         <div class="border-2 border-blue-500 flex  ">
-            <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px]"><img class="h-[32px] w-[32px] m-auto"
-                    src="./assets/emergency.png" alt="">
+            <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px]"><img
+                    class="h-[32px] w-[32px] justify-center items-center" src="./assets/emergency.png" alt="">
             </div>
             <i class="fa-regular fa-heart"></i>
         </div>
