--- a/index.html
+++ b/index.html
@@ -45,24 +45,213 @@
     </div>
 
     <!-- card part -->
-    <div class="border-2 border-red-500">
-        <div class="border-2 border-blue-500 flex  ">
-            <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px]"><img
-                    class="h-[32px] w-[32px] justify-center items-center" src="./assets/emergency.png" alt="">
+    <div class="bg-[#f5fff6] h-[100vh] px-5">
+        <div class="bg-white p-3 shadow-sm my-3 h-[350px] w-max rounded-lg">
+            <div class="flex justify-between items-center">
+                <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
+                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                </div>
+                <i class="fa-regular fa-heart"></i>
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <div class=" pt-3">
+                <h1 class="text-2xl font-bold">National Emergency Number</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+            </div>
+            <div class="py-4">
+                <h2 class="text-3xl font-bold">999</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+            </div>
+            <div class="flex gap-2">
+                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+                        class="fa-regular fa-copy"></i> COPY</button>
+                <button
+                    class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
+                        class="fa-solid fa-phone"></i> CALL</button>
+            </div>
         </div>
-        <div class="border-2 border-green-500">
-            <h1>National Emergency Number</h1>
-            <p>National Emergency</p>
+        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+            <div class="flex justify-between items-center">
+                <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
+                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                </div>
+                <i class="fa-regular fa-heart"></i>
+            </div>
+            <div class=" pt-3">
+                <h1 class="text-2xl font-bold">National Emergency Number</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+            </div>
+            <div class="py-4">
+                <h2 class="text-3xl font-bold">999</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+            </div>
+            <div class="flex gap-2">
+                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+                        class="fa-regular fa-copy"></i> COPY</button>
+                <button
+                    class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
+                        class="fa-solid fa-phone"></i> CALL</button>
+            </div>
         </div>
-        <div class="border-2 border-yellow-500">
-            <h2>999</h2>
-            <p>All</p>
+        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+            <div class="flex justify-between items-center">
+                <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
+                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                </div>
+                <i class="fa-regular fa-heart"></i>
+            </div>
+            <div class=" pt-3">
+                <h1 class="text-2xl font-bold">National Emergency Number</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+            </div>
+            <div class="py-4">
+                <h2 class="text-3xl font-bold">999</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+            </div>
+            <div class="flex gap-2">
+                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+                        class="fa-regular fa-copy"></i> COPY</button>
+                <button
+                    class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
+                        class="fa-solid fa-phone"></i> CALL</button>
+            </div>
         </div>
-        <div class="border-2 border-purple-500">
-            <button><i class="fa-regular fa-copy"></i>COPY</button>
-            <button><i class="fa-solid fa-phone"></i>CALL</button>
+        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+            <div class="flex justify-between items-center">
+                <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
+                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                </div>
+                <i class="fa-regular fa-heart"></i>
+            </div>
+            <div class=" pt-3">
+                <h1 class="text-2xl font-bold">National Emergency Number</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+            </div>
+            <div class="py-4">
+                <h2 class="text-3xl font-bold">999</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+            </div>
+            <div class="flex gap-2">
+                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+                        class="fa-regular fa-copy"></i> COPY</button>
+                <button
+                    class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
+                        class="fa-solid fa-phone"></i> CALL</button>
+            </div>
+        </div>
+        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+            <div class="flex justify-between items-center">
+                <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
+                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                </div>
+                <i class="fa-regular fa-heart"></i>
+            </div>
+            <div class=" pt-3">
+                <h1 class="text-2xl font-bold">National Emergency Number</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+            </div>
+            <div class="py-4">
+                <h2 class="text-3xl font-bold">999</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+            </div>
+            <div class="flex gap-2">
+                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+                        class="fa-regular fa-copy"></i> COPY</button>
+                <button
+                    class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
+                        class="fa-solid fa-phone"></i> CALL</button>
+            </div>
+        </div>
+        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+            <div class="flex justify-between items-center">
+                <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
+                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                </div>
+                <i class="fa-regular fa-heart"></i>
+            </div>
+            <div class=" pt-3">
+                <h1 class="text-2xl font-bold">National Emergency Number</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+            </div>
+            <div class="py-4">
+                <h2 class="text-3xl font-bold">999</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+            </div>
+            <div class="flex gap-2">
+                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+                        class="fa-regular fa-copy"></i> COPY</button>
+                <button
+                    class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
+                        class="fa-solid fa-phone"></i> CALL</button>
+            </div>
+        </div>
+        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+            <div class="flex justify-between items-center">
+                <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
+                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                </div>
+                <i class="fa-regular fa-heart"></i>
+            </div>
+            <div class=" pt-3">
+                <h1 class="text-2xl font-bold">National Emergency Number</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+            </div>
+            <div class="py-4">
+                <h2 class="text-3xl font-bold">999</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+            </div>
+            <div class="flex gap-2">
+                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+                        class="fa-regular fa-copy"></i> COPY</button>
+                <button
+                    class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
+                        class="fa-solid fa-phone"></i> CALL</button>
+            </div>
+        </div>
+        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+            <div class="flex justify-between items-center">
+                <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
+                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                </div>
+                <i class="fa-regular fa-heart"></i>
+            </div>
+            <div class=" pt-3">
+                <h1 class="text-2xl font-bold">National Emergency Number</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+            </div>
+            <div class="py-4">
+                <h2 class="text-3xl font-bold">999</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+            </div>
+            <div class="flex gap-2">
+                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+                        class="fa-regular fa-copy"></i> COPY</button>
+                <button
+                    class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
+                        class="fa-solid fa-phone"></i> CALL</button>
+            </div>
+        </div>
+        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+            <div class="flex justify-between items-center">
+                <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
+                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                </div>
+                <i class="fa-regular fa-heart"></i>
+            </div>
+            <div class=" pt-3">
+                <h1 class="text-2xl font-bold">National Emergency Number</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+            </div>
+            <div class="py-4">
+                <h2 class="text-3xl font-bold">999</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+            </div>
+            <div class="flex gap-2">
+                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+                        class="fa-regular fa-copy"></i> COPY</button>
+                <button
+                    class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
+                        class="fa-solid fa-phone"></i> CALL</button>
+            </div>
         </div>
     </div>
 
