--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body class="hind-madurai max-w-[1920px]">
 
     <!-- heading  part-->
-    <div class="flex justify-between px-[60px]">
+    <div class="flex justify-between md:px-[60px] py-2">
         <div class=" flex justify-between items-center">
             <img class="h-[50px] w-[50px]" src="./assets/logo.png" alt="">
             <h1 class="ml-2 text-[#006747]
@@ -27,9 +27,19 @@
         </div>
         <div>
             <div class="flex justify-between items-center">
-                <div class="flex">0<img class="h-[50px] w-[50px]" src="./assets/heart.png" alt=""></div>
-                <div class="flex">100<img src="./assets/coin.png" alt=""></div>
-                <div class="flex"><span>2</span>COPY</div>
+                <div class="flex bg-[#41ff6b1a] rounded-3xl w-[120px] h-[50px] justify-center items-center gap-3">
+                    <p class="font-black">0</p>
+                    <img class="h-[30px] w-[30px]" src="./assets/heart.png" alt="">
+                </div>
+                <div id="coin-amount"
+                    class="flex bg-[#41ff6b1a] rounded-3xl w-[120px] h-[50px] justify-center items-center gap-3">
+                    <p class="font-black">100</p>
+                    <img class="h-[24px] w-[24px]" src="./assets/coin.png" alt="">
+                </div>
+                <div
+                    class="flex font-bold text-white bg-green-500 rounded-3xl w-[120px] h-[50px] justify-center items-center gap-3">
+                    <p class="font-bold">2</p>COPY
+                </div>
             </div>
         </div>
     </div>
@@ -45,8 +55,8 @@
     </div>
 
     <!-- card part -->
-    <div class="bg-[#f5fff6] h-[100vh] px-5">
-        <div class="bg-white p-3 shadow-sm my-3 h-[350px] w-max rounded-lg">
+    <div class="bg-[#f5fff6] h-[100vh] px-5 py-8 grid grid-cols-1 lg:grid-cols-3 gap-4 ">
+        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
@@ -59,86 +69,90 @@
             </div>
             <div class="py-4">
                 <h2 class="text-3xl font-bold">999</h2>
-                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+                <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">All</p>
             </div>
-            <div class="flex gap-2">
-                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+            <div class="flex gap-5">
+                <button
+                    class="border-2 border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
                     class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
-                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                    <img class="h-[32px] w-[32px] " src="./assets/police.png" alt="">
                 </div>
                 <i class="fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">National Emergency Number</h1>
-                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+                <h1 class="text-2xl font-bold">Police Helpline Number</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">Police</p>
             </div>
             <div class="py-4">
                 <h2 class="text-3xl font-bold">999</h2>
-                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+                <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Police</p>
             </div>
-            <div class="flex gap-2">
-                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+            <div class="flex gap-5">
+                <button
+                    class="border-2 border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
                     class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
-                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                    <img class="h-[32px] w-[32px] " src="./assets/fire-service.png" alt="">
                 </div>
                 <i class="fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">National Emergency Number</h1>
-                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+                <h1 class="text-2xl font-bold">Fire Service Number</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">Fire Service</p>
             </div>
             <div class="py-4">
                 <h2 class="text-3xl font-bold">999</h2>
-                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+                <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Fire</p>
             </div>
-            <div class="flex gap-2">
-                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+            <div class="flex gap-5">
+                <button
+                    class="border-2 border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
                     class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
-                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                    <img class="h-[32px] w-[32px] " src="./assets/ambulance.png" alt="">
                 </div>
                 <i class="fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">National Emergency Number</h1>
-                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+                <h1 class="text-2xl font-bold">Ambulance Service</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">Ambulance</p>
             </div>
             <div class="py-4">
-                <h2 class="text-3xl font-bold">999</h2>
-                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+                <h2 class="text-3xl font-bold">1994-999999</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Health</p>
             </div>
-            <div class="flex gap-2">
-                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+            <div class="flex gap-5">
+                <button
+                    class="border-2 border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
                     class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
@@ -146,22 +160,23 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">National Emergency Number</h1>
-                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+                <h1 class="text-2xl font-bold">Women & Child Helpline</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">Women & Child Helpline</p>
             </div>
             <div class="py-4">
-                <h2 class="text-3xl font-bold">999</h2>
-                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+                <h2 class="text-3xl font-bold">109</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Help</p>
             </div>
-            <div class="flex gap-2">
-                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+            <div class="flex gap-5">
+                <button
+                    class="border-2 border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
                     class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
@@ -169,22 +184,23 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">National Emergency Number</h1>
-                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+                <h1 class="text-2xl font-bold">Anti-Corruption Helpline</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">Anti-Corruption</p>
             </div>
             <div class="py-4">
-                <h2 class="text-3xl font-bold">999</h2>
-                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+                <h2 class="text-3xl font-bold">106</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Govt</p>
             </div>
-            <div class="flex gap-2">
-                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+            <div class="flex gap-5">
+                <button
+                    class="border-2 border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
                     class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
@@ -192,69 +208,96 @@
                 <i class="fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">National Emergency Number</h1>
-                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+                <h1 class="text-2xl font-bold">Electricity Helpline</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">Electricity Outage</p>
             </div>
             <div class="py-4">
-                <h2 class="text-3xl font-bold">999</h2>
-                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+                <h2 class="text-3xl font-bold">16216</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Electricity
+                </p>
             </div>
-            <div class="flex gap-2">
-                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+            <div class="flex gap-5">
+                <button
+                    class="border-2 border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
                     class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
-                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                    <img class="h-[32px] w-[32px] " src="./assets/brac.png" alt="">
                 </div>
                 <i class="fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">National Emergency Number</h1>
-                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+                <h1 class="text-2xl font-bold">Brac Helpline</h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">Brac</p>
             </div>
             <div class="py-4">
-                <h2 class="text-3xl font-bold">999</h2>
-                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+                <h2 class="text-3xl font-bold">16445</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">NGO</p>
             </div>
-            <div class="flex gap-2">
-                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+            <div class="flex gap-5">
+                <button
+                    class="border-2 border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
                     class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm m-5 h-[350px] w-max rounded-lg">
+        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
-                    <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
+                    <img class="h-[32px] w-[32px] " src="./assets/Bangladesh-Railway.png" alt="">
                 </div>
                 <i class="fa-regular fa-heart"></i>
             </div>
             <div class=" pt-3">
-                <h1 class="text-2xl font-bold">National Emergency Number</h1>
-                <p class="text-lg text-[#5c5c5c] font-normal">National Emergency</p>
+                <h1 class="text-2xl font-bold">Bangladesh Railway Helpline </h1>
+                <p class="text-lg text-[#5c5c5c] font-normal">Bangladesh Railway Helpline </p>
             </div>
             <div class="py-4">
-                <h2 class="text-3xl font-bold">999</h2>
-                <p class="text-lg text-[#5c5c5c] font-normal">All</p>
+                <h2 class="text-3xl font-bold">163</h2>
+                <p class="text-lg text-[#5c5c5c] font-normal bg-[#f2f2f2] rounded-xl w-max text-center px-3">Travel</p>
             </div>
-            <div class="flex gap-2">
-                <button class="border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
+            <div class="flex gap-5">
+                <button
+                    class="border-2 border-gray-400 text-[16px] text-[#5c5c5c] font-normal w-[175px] h-[38px] rounded-lg"><i
                         class="fa-regular fa-copy"></i> COPY</button>
                 <button
                     class="border-2 text-[16px] text-white font-normal bg-[#00a63e] w-[175px] h-[40px] rounded-lg"><i
                         class="fa-solid fa-phone"></i> CALL</button>
+            </div>
+        </div>
+
+
+        <!-- call history -->
+        <div class="grid-rows-3 bg-white p-3 shadow-sm my-3 rounded-lg">
+            <div class="flex justify-between items-center">
+                <div class="flex gap-3  items-center"><i class="fa-regular fa-clock"></i>
+                    <h1 class="font-medium">Call History</h1>
+                </div>
+                <div class="text-white bg-green-600 w-[90px] h-[40px] rounded-2xl flex justify-center items-center">
+                    <p>Clear</p>
+                </div>
+            </div>
+            <div class="flex justify-between items-center bg-[#fafafa] my-2 rounded-xl">
+                <div>
+                    <h1 class="font-semibold">Fire Service Number</h1>
+                    <p>Number</p>
+                </div>
+                <p>Time</p>
             </div>
         </div>
     </div>
 
+
+
+    <script src="script.js"></script>
 </body>
 
 </html>
