--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <body class="hind-madurai max-w-[1920px]">
 
     <!-- heading  part-->
-    <div class="flex justify-between md:px-[60px] py-2">
-        <div class=" flex justify-between items-center">
+    <div class="sm:flex justify-between sm:px-[60px] py-2">
+        <div class="flex items-center justify-center">
             <img class="h-[50px] w-[50px]" src="./assets/logo.png" alt="">
             <h1 class="ml-2 text-[#006747]
             font-black">Emergency <br> Service</h1>
@@ -45,18 +45,19 @@
     </div>
 
     <!-- banner part -->
-    <div class="h-52 bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] ">
+    <div class="h-max bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] ">
         <div class="pt-5"><img class="h-[92px] w-[92px] mx-auto " src="./assets/logo-dark.png" alt=""></div>
-        <h1 class="text-4xl text-white font-bold text-center py-3">Emergency Service Directory</h1>
-        <p class="text-xl text-white font-semibold text-center">Government Emergency Services at Your Fingertip – A
+        <h1 class="text-2xl sm:text-4xl text-white font-bold text-center py-2">Emergency Service Directory</h1>
+        <p class="text-xs sm:text-xl text-white font-semibold text-center pb-2">Government Emergency Services at Your
+            Fingertip – A
             Project by
             Government of the People’s Republic of
             Bangladesh</p>
     </div>
 
     <!-- card part -->
-    <div class="bg-[#f5fff6] h-[100vh] px-5 py-8 grid grid-cols-1 lg:grid-cols-3 gap-4 ">
-        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
+    <div class="bg-[#f5fff6] h-[100vh] px-6 py-4 grid grid-cols-1 lg:grid-cols-4  gap-4  ">
+        <div class="bg-white p-3 shadow-sm h-max lg:h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
@@ -80,7 +81,7 @@
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
+        <div class="bg-white p-3 shadow-sm h-max lg:h-[350px]  rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/police.png" alt="">
@@ -104,7 +105,7 @@
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
+        <div class="bg-white p-3 shadow-sm h-max lg:h-[350px]  rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/fire-service.png" alt="">
@@ -128,7 +129,7 @@
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
+        <div class="bg-white p-3 shadow-sm h-max lg:h-[350px]  rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/ambulance.png" alt="">
@@ -152,7 +153,7 @@
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
+        <div class="bg-white p-3 shadow-sm h-max lg:h-[350px] rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
@@ -176,7 +177,7 @@
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
+        <div class="bg-white p-3 shadow-sm h-max lg:h-[350px]  rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
@@ -200,7 +201,7 @@
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
+        <div class="bg-white p-3 shadow-sm h-max lg:h-[350px]  rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/emergency.png" alt="">
@@ -225,7 +226,7 @@
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
+        <div class="bg-white p-3 shadow-sm h-max lg:h-[350px]  rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/brac.png" alt="">
@@ -249,7 +250,7 @@
                         class="fa-solid fa-phone"></i> CALL</button>
             </div>
         </div>
-        <div class="bg-white p-3 shadow-sm my-3 h-[350px] rounded-lg">
+        <div class="bg-white p-3 shadow-sm h-max lg:h-[350px]  rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="bg-[#ffe3e2] rounded-2xl h-[60px] w-[60px] flex justify-center items-center">
                     <img class="h-[32px] w-[32px] " src="./assets/Bangladesh-Railway.png" alt="">
@@ -276,7 +277,7 @@
 
 
         <!-- call history -->
-        <div class="grid-rows-3 bg-white p-3 shadow-sm my-3 rounded-lg">
+        <div class=" lg:col-start-4 lg:row-start-1 row-span-3 bg-white p-3 shadow-sm rounded-lg">
             <div class="flex justify-between items-center">
                 <div class="flex gap-3  items-center"><i class="fa-regular fa-clock"></i>
                     <h1 class="font-medium">Call History</h1>
@@ -285,7 +286,7 @@
                     <p>Clear</p>
                 </div>
             </div>
-            <div class="flex justify-between items-center bg-[#fafafa] my-2 rounded-xl">
+            <div class="flex justify-between items-center bg-[#fafafa] rounded-xl my-2 px-2">
                 <div>
                     <h1 class="font-semibold">Fire Service Number</h1>
                     <p>Number</p>
